# RAG-Anything

./: .gitignore  DEPLOY.md  Makefile  ONYX_INTEGRATION_DESIGN.md  ONYX_INTEGRATION_PLAN.md  PLAN.md  RAG_SERVICE_DESIGN.md  README.md  api_summary.md  docker-compose.dev.yml  docker-compose.poc.yml  docker-compose.prod.yml  env.example  followups.md
apps/: README.md
apps/server/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/server/alembic/: env.py
apps/server/alembic/versions/: 001_initial_business_tables.py  002_auth_tables.py  003_conversations.py  004_jobs_fk_cascade.py  005_lightrag_full_kv_tables.py
apps/server/docker/: init-poc.sql  poc-pg.Dockerfile
apps/server/scripts/: export_onyx_openapi.py  smoke_onyx.py
apps/server/src/rag_service/: cli.py  config.py
apps/server/src/rag_service/api/: __init__.py  app.py  auth.py  auth_onyx.py  deps.py  onyx_schemas.py  rate_limit.py  schemas.py
apps/server/src/rag_service/api/routers/: auth.py  conversations.py  documents.py  health.py  ingest.py  jobs.py  kg.py  onyx_documents.py  onyx_jobs.py  onyx_kb.py  onyx_kg.py  onyx_query.py  query.py  tenants.py
apps/server/src/rag_service/auth/: __init__.py  jwt.py  password.py
apps/server/src/rag_service/conversations/: __init__.py  orchestrator.py  repository.py
apps/server/src/rag_service/core/: __init__.py  llm_provider.py  paths.py  rag_factory.py  reload_listener.py
apps/server/src/rag_service/db/: __init__.py  base.py  models.py  session.py
apps/server/src/rag_service/db/repositories/: tenants.py
apps/server/src/rag_service/kg/: __init__.py  graph.py  repository.py
apps/server/src/rag_service/observability/: __init__.py  logging.py  metrics.py
apps/server/src/rag_service/parsers/: __init__.py  mineru_cloud.py
apps/server/src/rag_service/services/: __init__.py  ingest.py  query.py
apps/server/src/rag_service/worker/: __init__.py  locks.py  settings.py  tasks.py
apps/server/tests/: conftest.py  test_config.py  test_export_onyx_openapi.py
apps/server/tests/api/: conftest.py  test_app_onyx_integration.py  test_auth_basic.py  test_auth_onyx.py  test_auth_session.py  test_conversations.py  test_documents.py  test_health.py  test_ingest.py  test_jobs.py  test_kg_flat.py  test_kg_graph.py  test_onyx_documents.py  test_onyx_jobs.py  test_onyx_kb.py  test_onyx_kg.py  test_onyx_query.py  test_query.py  test_rate_limit.py  test_rate_limit_onyx.py  test_tenants.py
apps/server/tests/auth/: test_jwt.py  test_password.py
apps/server/tests/conversations/: test_orchestrator.py  test_repository.py
apps/server/tests/core/: test_llm_provider.py  test_paths.py  test_rag_factory.py  test_reload_listener.py
apps/server/tests/db/: test_tenants_onyx.py
apps/server/tests/e2e/: conftest.py  test_ingest_query.py  test_onyx_integration.py
apps/server/tests/kg/: test_graph.py  test_repository.py
apps/server/tests/observability/: test_logging_onyx.py  test_metrics_onyx.py
apps/server/tests/parsers/: test_mineru_cloud.py
apps/server/tests/security/: test_onyx_isolation.py
apps/server/tests/worker/: test_locks.py  test_tasks_ingest.py  test_tasks_rebuild.py
apps/web/: .gitignore  Dockerfile  README.md  package.json  playwright.config.ts  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  (+1 more)
docs/: poc-results.md
docs/onyx-integration/: openapi.yaml  perf-baseline.md
raganything/: parser.py
scripts/: _smoke_parse.py  ingest_dir.py  mineru_cloud_parse.py  run_rag.py
scripts/ops/: backup.sh  restore.sh  restore_tenant.sh
scripts/poc/: .env.poc.example  poc_ingest_query.py
(+49 files in other folders)
