[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-service"
version = "0.1.0"
description = "RAG-Anything alpha-product backend service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "raganything",
    "fastapi",
    "uvicorn[standard]",
    "arq",
    "asyncpg",
    "redis",
    "sqlalchemy[asyncio]>=2.0",
    "alembic",
    "pydantic-settings",
    "python-multipart",
    "structlog",
    "httpx",
    "bcrypt>=4.0",
    "prometheus-client>=0.17",
]

[project.scripts]
rag-api = "rag_service.cli:rag_api"
rag-worker = "rag_service.cli:rag_worker"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "testcontainers[postgres,redis]",
    "ruff",
    "fakeredis[lua]>=2.35.1",
]

[tool.uv.sources]
raganything = { path = "../..", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/rag_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
